fix issue with text overlapping buttons

--- a/app/static/css/maps.css
+++ b/app/static/css/maps.css
@@ -209,7 +209,7 @@ padding-top: 1rem;
   width: 100%;
   font-size: 10pt;
   font-weight: bold;
-  padding: 12px 30px 12px 30px;
+  padding: .75rem .5rem;
   border-radius: 4px;
   cursor: pointer;
   background-color: #eeeff1;
